--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "framer-motion": "^11.5.5",
     "lucide-react": "^0.441.0",
     "next": "14.2.12",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.168.0",
