--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.112.0",
     "@react-three/fiber": "^8.17.7",
@@ -29,6 +30,7 @@
     "lucide-react": "^0.441.0",
     "next": "14.2.12",
     "next-themes": "^0.3.0",
+    "octokit": "^4.0.2",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.5.0",
