--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cmdk": "^1.0.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.5.5",
     "lucide-react": "^0.441.0",
     "next": "14.2.12",
