--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.60",
     "@clerk/nextjs": "^5.6.0",
     "@clerk/themes": "^2.1.30",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -22,6 +23,7 @@
     "@react-three/drei": "^9.112.0",
     "@react-three/fiber": "^8.17.7",
     "@vercel/postgres": "^0.10.0",
+    "ai": "^3.3.43",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -39,7 +41,8 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.168.0",
-    "three-globe": "^2.31.1"
+    "three-globe": "^2.31.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
